@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-19T12:20:59Z",
+  "timestamp" : "2025-12-20T00:50:49Z",
   "count_outdated" : 5456,
   "uniques_outdated" : 3050,
-  "count" : 5537,
-  "uniques" : 3105,
+  "count" : 5541,
+  "uniques" : 3109,
   "clones" : [
     {
       "timestamp": "2025-12-06T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 5,
+      "count_minmax": [ 1, 5 ],
+      "count_decinc": [ 0, 5 ],
+      "uniques": 5,
+      "uniques_minmax": [ 1, 5 ],
+      "uniques_decinc": [ 0, 5 ]
     }
   ]
 }
