@@ -1,6 +1,6 @@
 {
-  "count": 81,
-  "uniques": 48,
+  "count": 85,
+  "uniques": 52,
   "clones": [
     {
       "timestamp": "2025-12-06T00:00:00Z",
@@ -59,8 +59,8 @@
     },
     {
       "timestamp": "2025-12-19T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 5,
+      "uniques": 5
     }
   ]
 }
