@@ -1,3 +1,12 @@
+2025-12-20T00:50:49Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20386517275 # 1376
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-20
+* notice: last 14d: unq all: 52 85
+* notice: prev accum: outdated-unq outdated-all / unq all: 3050 5456 / 3105 5537
+* notice: next accum: outdated-unq outdated-all / unq all: 3050 5456 / 3109 5541
+* notice: prev exec diff / last date diff / accum: unq all: +4 +4 -0 -0 / +5 +5 -0 -0 / 5 5
+* notice: removed / changed dates: [] / [2025-12-19]
+
 2025-12-19T12:20:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20369855034 # 1375
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-19
